--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.3.1",
     "react-native": "0.77.0",
-    "react-native-splash-screen": "^3.3.0"
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-svg": "^15.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
