--- a/package.json
+++ b/package.json
@@ -10,12 +10,29 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react-native-bcrypt": "^2.4.6",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.77.0",
+    "react-native-bcrypt": "^2.4.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^15.11.1"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^15.11.1",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
+    "uuid": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,7 +47,9 @@
     "@react-native/typescript-config": "0.77.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.2.6",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
