--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-fbsdk-next": "^13.4.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^5.2.0",
